--- a/POELiveSplitComponentTests/POELiveSplitComponentTests.csproj
+++ b/POELiveSplitComponentTests/POELiveSplitComponentTests.csproj
@@ -60,7 +60,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\LiveSplit\LiveSplit\LiveSplit.Core\LiveSplit.Core.csproj">
+    <ProjectReference Include="..\LiveSplit\src\LiveSplit.Core\LiveSplit.Core.csproj">
       <Project>{6DE847DB-20A3-4848-AEEE-1B4364AECDFB}</Project>
       <Name>LiveSplit.Core</Name>
     </ProjectReference>
